tests/ui/cmse-nonsecure/cmse-nonsecure-call/params-on-stack.stderr
error[E0798]: arguments for `C-cmse-nonsecure-call` function too large to pass via registers
  --> $DIR/params-on-stack.rs:23:5
   |
LL |     let non_secure_function = unsafe {
   |         ------------------- this function uses the `C-cmse-nonsecure-call` ABI
...
LL |     non_secure_function(a, b, c, d, e)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ but its arguments don't fit in the available registers
   |
   = note: functions with the `C-cmse-nonsecure-call` ABI must pass all their arguments via the 4 32-bit available argument registers

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0798`.
